src/objects/TR1__Associated_Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Qualifications__c</fullName>
        <label>Qualifications (Old)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Qualification_Type2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>B.Ed + State Teaching Certification</fullName>
                </value>
                <value>
                    <fullName>BA + Teacher Training</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Arts / Bachelor of Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Arts/ Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Early Childhood Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Education/ Bachelor of Science (Secondary)</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Education (Primary)</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Education (Special Education)</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Health, Sport and Physical Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Primary Education</fullName>
                </value>
                <value>
                    <fullName>Bachelor of Science and Education in Secondary Teaching</fullName>
                </value>
                <value>
                    <fullName>Bachelors Degree</fullName>
                </value>
                <value>
                    <fullName>BA or BSc + Teacher Training</fullName>
                </value>
                <value>
                    <fullName>BA with QTS</fullName>
                </value>
                <value>
                    <fullName>B ED</fullName>
                </value>
                <value>
                    <fullName>BED with QTS</fullName>
                </value>
                <value>
                    <fullName>BSC with QTS</fullName>
                </value>
                <value>
                    <fullName>BTEC</fullName>
                </value>
                <value>
                    <fullName>CACHE L1</fullName>
                </value>
                <value>
                    <fullName>CACHE L2</fullName>
                </value>
                <value>
                    <fullName>CACHE L3</fullName>
                </value>
                <value>
                    <fullName>CERT ED FE</fullName>
                </value>
                <value>
                    <fullName>City and Guilds 7307</fullName>
                </value>
                <value>
                    <fullName>CTLLS</fullName>
                </value>
                <value>
                    <fullName>Degree</fullName>
                </value>
                <value>
                    <fullName>Degree in Curriculum Subject</fullName>
                </value>
                <value>
                    <fullName>Dip In Childcare and Education</fullName>
                </value>
                <value>
                    <fullName>Dip In Play Work</fullName>
                </value>
                <value>
                    <fullName>Dip in Support Work in Schools</fullName>
                </value>
                <value>
                    <fullName>Diploma in Education &amp; Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quals_Sighted_By2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quals Sighted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Associated_Qualifications5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quals_Sited__c</fullName>
        <label>Quals Sited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTW_Requested_Date__c</fullName>
        <label>RTW Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RTW_Submitted_Date__c</fullName>
        <label>RTW Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Re_clear__c</fullName>
        <label>Re-clear</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recruitment_Decision_Taken_By_Date__c</fullName>
        <label>Recruitment Decision Taken By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recruitment_Decision_Taken_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recruitment Decision Taken By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Associated_Qualifications6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recruitment_Decision_Taken__c</fullName>
        <label>Recruitment Decision Taken By (Old)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_1_Date_Range_End__c</fullName>
        <label>Reference 1 Date Range End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_1_Date_Range__c</fullName>
        <label>Reference 1 Date Range Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_1_Job_Title__c</fullName>
        <formula>TEXT(Reference_1_Name__r.Roles__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference 1 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_1_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference 1 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associated Qualifications (Reference 1 Name)</relationshipLabel>
        <relationshipName>Associated_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_1_Rating__c</fullName>
        <inlineHelpText>1=Poor   
5=Excellent</inlineHelpText>
        <label>Reference 1 Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_1_Text_Name__c</fullName>
        <label>Reference 1 Text Name</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_2_Date_Rage__c</fullName>
        <label>Reference 2 Date Range Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_2_Date_Range_End__c</fullName>
        <label>Reference 2 Date Range End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_2_Job_Title__c</fullName>
        <formula>TEXT(Reference_2_Name__r.Roles__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference 2 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_2_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference 2 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associated Qualifications (Reference 2 Name)</relationshipLabel>
        <relationshipName>Associated_Qualifications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_2_Rating__c</fullName>
        <inlineHelpText>1=Poor
5=Excellent</inlineHelpText>
        <label>Reference 2 Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_2_Received_Date__c</fullName>
        <label>Reference 2 Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_2_Sent_Date__c</fullName>
        <label>Reference 2 Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_2_Text_Name__c</fullName>
        <label>Reference 2 Text Name</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_3_Date_Range_End__c</fullName>
        <label>Reference 3 Date Range End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_3_Date_Range__c</fullName>
        <label>Reference 3 Date Range Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_3_Job_Title__c</fullName>
        <formula>TEXT(Reference_3_Name__r.Roles__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reference 3 Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_3_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference 3 Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associated Qualifications (Reference 3 Name)</relationshipLabel>
        <relationshipName>Associated_Qualifications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_3_Rating__c</fullName>
        <inlineHelpText>1=Poor
5=Excellent</inlineHelpText>
        <label>Reference 3 Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reference_3_Received_Date__c</fullName>
        <label>Reference 3 Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_3_Sent_Date__c</fullName>
        <label>Reference 3 Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_3_Text_Name__c</fullName>
        <label>Reference 3 Text Name</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Received_Date__c</fullName>
        <label>Reference 1 Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_Sent_Date__c</fullName>
        <label>Reference 1 Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_Type_1__c</fullName>
        <label>Reference Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Character</fullName>
                </value>
                <value>
                    <fullName>Non-teaching</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Teacher</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refrences_Submitted_Date__c</fullName>
        <label>Refrences Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Registered_Body__c</fullName>
        <label>Registered Body</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Form_Received__c</fullName>
        <label>Registration Form Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_to_You__c</fullName>
        <label>Relationship to You</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retroactively_trigger_workflow__c</fullName>
        <label>Retroactively trigger workflow</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Right_to_Work_Sighted_By_New__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Right to Work Sighted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Associated_Qualifications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Right_to_Work_Sighted_By__c</fullName>
        <label>Right to Work Sighted By (Old)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Right_to_Work_Sighted_Date__c</fullName>
        <label>Right to Work Sighted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roll_Number__c</fullName>
        <label>Roll Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SET_Checked_Date__c</fullName>
        <label>SET Checked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SET_Expiry_Date__c</fullName>
        <label>SET Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SET_Phone__c</fullName>
        <defaultValue>&quot;0203 092 5001&quot;</defaultValue>
        <label>SET Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SET_Registration_Number__c</fullName>
        <label>SET Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SET_URL__c</fullName>
        <defaultValue>&quot;https://set.et-foundation.co.uk/professionalism/the-qtls-register/&quot;</defaultValue>
        <label>SET URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Safeguarding_Date_Completed__c</fullName>
        <label>Safeguarding Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Safeguarding_Expiry_Date_New__c</fullName>
        <label>Safeguarding Expiry Date (New)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Safeguarding_Expiry_Date__c</fullName>
        <description>Date Safeguarding Training Completed + 366 days</description>
        <formula>Safeguarding_Date_Completed__c +366</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Safeguarding Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Safeguarding_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Safeguarding Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seeking_International_Position__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seeking International Position</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <inlineHelpText>Needs to be in the format 12-34-56</inlineHelpText>
        <label>Sort Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Associated_Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Associated Qualification</label>
        <referenceTo>TR1__Associated_Qualification__c</referenceTo>
        <relationshipLabel>Compliance Documents (Source Associated Qualification)</relationshipLabel>
        <relationshipName>Source_Compliance_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Phohib_Date_Checked__c</fullName>
        <label>Prohibition Order Date Checked - Support</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TOE_Received__c</fullName>
        <label>Terms</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>TR1__Branch__c</referenceTo>
        <relationshipLabel>Associated Qualifications</relationshipLabel>
        <relationshipName>Associated_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Completed_Collection_Methods__c</fullName>
        <label>Completed Collection Method(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Docusign</fullName>
                </value>
                <value>
                    <fullName>Field Update</fullName>
                </value>
                <value>
                    <fullName>Upload File</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Contact_Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Qualification</label>
        <referenceTo>TR1__Associated_Qualification__c</referenceTo>
        <relationshipLabel>Associated Qualifications</relationshipLabel>
        <relationshipName>Associated_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Associated Qualifications</relationshipLabel>
        <relationshipName>Associated_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Date_Verified__c</fullName>
        <label>Date Verified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Upsert Key</description>
        <externalId>true</externalId>
        <inlineHelpText>Upsert Key</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Issue_Date_Only__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Issue_Date__c</fullName>
        <label>Issue Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Issued_Qualification_ID__c</fullName>
        <label>Issued Qualification ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Qualification</label>
        <referenceTo>TR1__Associated_Qualification__c</referenceTo>
        <relationshipLabel>Associated Qualifications (Job Qualification)</relationshipLabel>
        <relationshipName>Associated_Qualifications_Job</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Associated Qualifications</relationshipLabel>
        <relationshipName>Associated_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Qualification_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualification Package</label>
        <referenceTo>TR1__Qualification_Package__c</referenceTo>
        <relationshipLabel>Associated Qualifications</relationshipLabel>
        <relationshipName>Associated_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Qualification__c</fullName>
        <label>Qualification</label>
        <referenceTo>TR1__Qualification__c</referenceTo>
        <relationshipLabel>Associated Qualifications</relationshipLabel>
        <relationshipName>Associated_Qualifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>TR1__Screening__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Screening</label>
        <referenceTo>TR1__Screening__c</referenceTo>
        <relationshipLabel>Associated Qualifications</relationshipLabel>
        <relationshipName>Associated_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                    <label>Requested</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teacher_Ref_No_NCTL__c</fullName>
        <label>Teacher Ref No. (NCTL)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms_Submitted_Date__c</fullName>
        <label>Terms Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Since_Doc_Was_Submitted__c</fullName>
        <formula>TEXT(floor(NOW() -  ID_Submitted_Date__c )) + &apos; Days &apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since ID Was Submitted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UK_Arrival_Date__c</fullName>
        <label>UK Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_Service_Status_Check__c</fullName>
        <label>Update Service Status Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current No Info</fullName>
                </value>
                <value>
                    <fullName>Current Info Held</fullName>
                </value>
                <value>
                    <fullName>No Longer Current</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upload_CV__c</fullName>
        <defaultValue>&quot;Please upload your CV using the document upload section on the &apos;My Profile&apos; page&quot;</defaultValue>
        <label>Upload CV</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Permit_OR_Visa_Expiry_Date__c</fullName>
        <label>Work Permit OR Visa Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Permit_OR_Visa_Types__c</fullName>
        <label>Work Permit OR Visa Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T1 Post Study UK Graduate</fullName>
                </value>
                <value>
                    <fullName>T1 Highly Skilled (HSMP)</fullName>
                </value>
                <value>
                    <fullName>T2 Sponsored Skilled (WP)</fullName>
                </value>
                <value>
                    <fullName>T3 Low Skilled Workers</fullName>
                </value>
                <value>
                    <fullName>T4 Student Visa</fullName>
                </value>
                <value>
                    <fullName>T5 Sponsored or Temporary</fullName>
                </value>
                <value>
                    <fullName>T5 Working Holidaymaker</fullName>
                </value>
                <value>
                    <fullName>T5 Gap Year</fullName>
                </value>
                <value>
                    <fullName>T5 Japan Youth Exchange</fullName>
                </value>
                <value>
                    <fullName>Ancestry Visa</fullName>
                </value>
                <value>
                    <fullName>Commonwealth Citizenship</fullName>
                </value>
                <value>
                    <fullName>Dependant Visa</fullName>
                </value>
                <value>
                    <fullName>European Economic Area</fullName>
                </value>
                <value>
                    <fullName>EEA Workers Registration</fullName>
                </value>
                <value>
                    <fullName>Further leave to rem.  UK</fullName>
                </value>
                <value>
                    <fullName>Indef. leave (enter/rem)</fullName>
                </value>
                <value>
                    <fullName>Limited leave (enter/rem)</fullName>
                </value>
                <value>
                    <fullName>Permanent Residence Perm</fullName>
                </value>
                <value>
                    <fullName>The right of abode</fullName>
                </value>
                <value>
                    <fullName>Student Visa - Permitted</fullName>
                </value>
                <value>
                    <fullName>Student Visa - Prohibited</fullName>
                </value>
                <value>
                    <fullName>Spousal Visa</fullName>
                </value>
                <value>
                    <fullName>Working holiday visa</fullName>
                </value>
                <value>
                    <fullName>Work Permit (Perm only)</fullName>
                </value>
                <value>
                    <fullName>Work Perm Ext (Perm only)</fullName>
                </value>
                <value>
                    <fullName>Bunac Visa</fullName>
                </value>
                <value>
                    <fullName>YMS Visa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Permit_OR_Visa_Valid_From_Date__c</fullName>
        <label>Work Permit OR Visa Valid From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Working_Status__c</fullName>
        <label>Working Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Working SD DtoD</fullName>
                </value>
                <value>
                    <fullName>Working Direct DtoD</fullName>
                </value>
                <value>
                    <fullName>Working Other Agency DtoD</fullName>
                </value>
                <value>
                    <fullName>Available AM</fullName>
                </value>
                <value>
                    <fullName>Available PM</fullName>
                </value>
                <value>
                    <fullName>Available FD</fullName>
                </value>
                <value>
                    <fullName>Working SD LT</fullName>
                </value>
                <value>
                    <fullName>Working Direct LT</fullName>
                </value>
                <value>
                    <fullName>Working Other Agency LT</fullName>
                </value>
                <value>
                    <fullName>Unavailable AM</fullName>
                </value>
                <value>
                    <fullName>unavailable PM</fullName>
                </value>
                <value>
                    <fullName>Unavailable FD</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
                <value>
                    <fullName>Interview SD</fullName>
                </value>
                <value>
                    <fullName>Interview Direct</fullName>
                </value>
                <value>
                    <fullName>Interview Other Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1_Term_Ind_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>&gt;1 Term  Ind. Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Term_Induction_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Term Induction Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1st_Worked_in_UK__c</fullName>
        <label>Date 1st Worked in UK</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3_month_Update__c</fullName>
        <label>3-month Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_DBS_URL__c</fullName>
        <defaultValue>&apos;https://secure.crbonline.gov.uk/enquiry/enquirySearch.do&apos;</defaultValue>
        <label>3rd Party DBS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>X6_month_Update__c</fullName>
        <label>6-month Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isBatch_updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBatch updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qualificationName__c</fullName>
        <formula>TR1__Qualification__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>qualificationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>x3rd_party_dbs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this checkbox is ticked, check using the 3rd party DBS URL.</inlineHelpText>
        <label>3rd Party DBS</label>
        <type>Checkbox</type>
    </fields>
    <label>Associated Qualification</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>TR1__Contact__c</columns>
        <columns>NAME</columns>
        <columns>TR1__Qualification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AQ-{0000}</displayFormat>
        <label>Associated Qualification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Qualifications</pluralLabel>
    <recordTypes>
        <fullName>Barred_List</fullName>
        <active>false</active>
        <label>Barred List</label>
    </recordTypes>
    <recordTypes>
        <fullName>CV</fullName>
        <active>false</active>
        <label>CV</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disqualification_by_Association</fullName>
        <active>false</active>
        <label>Disqualification by Association</label>
    </recordTypes>
    <recordTypes>
        <fullName>Early_Years_Qualifications</fullName>
        <active>false</active>
        <label>Early Years Qualifications</label>
    </recordTypes>
    <recordTypes>
        <fullName>Emergency_Contact</fullName>
        <active>false</active>
        <label>Emergency Contact</label>
    </recordTypes>
</CustomObject>